logo: more tweaks to avoid layout shift

--- a/src/components/Logo.module.css
+++ b/src/components/Logo.module.css
@@ -1,5 +1,6 @@
 .logo {
   width: 190px;
+  height: 44px;
   padding: 0.125rem 1rem;
 
   font-family: "Cascadia Mono", monospace;
@@ -12,18 +13,21 @@
   color: var(--dark);
   background-color: #000;
   display: inline-block;
+  position: relative;
 }
 
 .emoji {
   font-family: "Noto Emoji", monospace;
   font-weight: 900;
-  margin-right: 0.3ch;
+  margin-right: 0.75ch;
 }
 
 .logo svg {
-  height: 1.5em;
-  margin-right: 0.5ch;
-  margin-bottom: -0.375em;
+  /* use absolute positioning to avoid shift as font loads */
+  position: absolute;
+  left: 38px;
+  top: 8px;
+  width: 28px;
 }
 
 .title {
